# ChangeLog for media-plugins/gst-rtsp-server
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net>
  gst-rtsp-server-0.10.6.ebuild, gst-rtsp-server-0.10.7.ebuild,
  gst-rtsp-server-0.10.8.ebuild,
  +files/gst-rtsp-server-0.10.8-configure-set-PYGOBJECT_REQ-before-using-it.
  patch:
  Cleanup and fix from uptream for python support (pygobject)

*gst-rtsp-server-0.10.8 (20 Feb 2011)

  20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gst-rtsp-server-0.10.8.ebuild:
  Version bump.

*gst-rtsp-server-0.10.7 (15 Oct 2010)

  15 Oct 2010; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gst-rtsp-server-0.10..ebuild:
  Version bump.

*gst-rtsp-server-0.10.6 (23 Sept 2010)

  23 Sept 2010; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gst-rtsp-server-0.10.6.ebuild:
  Version bump.

*gst-rtsp-server-0.10.4 (9 Aug 2009)

  9 Aug 2009; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gst-rtsp-server-0.10.4.ebuild:
  Version bump.

*gst-rtsp-server-0.10.2 (16 Mai 2009)

  16 Mai 2009; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gst-rtsp-server-0.10.2.ebuild:
  Version bump.

*gst-rtsp-server-0.10.1.0 (22 Mrz 2009)

  22 Mrz 2009; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gst-rtsp-server-0.10.1.0.ebuild:
  Initial import.
