@@ -14,6 +14,6 @@ EBUILD gst-rtsp-server-0.10.4.ebuild 1175 RMD160 045f325650c72c7dbfcecbceedfa9ec
 EBUILD gst-rtsp-server-0.10.5.ebuild 1175 RMD160 045f325650c72c7dbfcecbceedfa9ecb4964f5d4 SHA1 bbf41a6a6677192c63621c83ed61ba5ce76dcc09 SHA256 5a35f9e220cb41401e75cc8652ac40a97dc68221663b5b6cf9b6cf5179cb9507
 EBUILD gst-rtsp-server-0.10.6.ebuild 1236 RMD160 60ed7fd415b8053e7524c66eb223b12f7d894f6c SHA1 0db61fd8a9df984d36da933d6d433377f6e12805 SHA256 e2ad2bf978b993033886036e30ccb34c326b77c6e0f1e47d1706a4d727a44e50
 EBUILD gst-rtsp-server-0.10.7.ebuild 1236 RMD160 60ed7fd415b8053e7524c66eb223b12f7d894f6c SHA1 0db61fd8a9df984d36da933d6d433377f6e12805 SHA256 e2ad2bf978b993033886036e30ccb34c326b77c6e0f1e47d1706a4d727a44e50
-EBUILD gst-rtsp-server-0.10.8.ebuild 1313 RMD160 bf7f06ea117839a24aa293bf84fe203bd13dc494 SHA1 887655428375204ac3a6bdc25e5fe05446c1e402 SHA256 9f17bdc4ca213b90377232325af9a3e48904234e36591d4946e2e0d15c926e3d
-MISC ChangeLog 1041 RMD160 b6f2b3cbb1d60e5d57b14c031d99376ebd5e87c7 SHA1 dddb6a3e3bde3e1133e46aa2bcfbc91d13af84c7 SHA256 0aaa5eda25a47beb05ada69354ce9d9c829b865eb30b13b968fb80cc3d5d4fc0
+EBUILD gst-rtsp-server-0.10.8.ebuild 1358 RMD160 82ab3a5c74104db1784a08914304afebf9a15a20 SHA1 c91d7dbb268aeece0c60f40a3edd2e0c5ecc6be4 SHA256 3e94e9ad34eb368fc39305f7d52f56a6a85cab408d9cf7195d9dbd7d077f887a
+MISC ChangeLog 1350 RMD160 8e0b31d2ee5db89e9f41167c47a7679e22a2c187 SHA1 ce4eb007cef3318e5aa70b2aecb821a2d764a84f SHA256 1ac6ba22f02830bad2f6e7e09e015e93ca31b6ff9f26170c141c8448d16bceee
 MISC metadata.xml 345 RMD160 a609b7ff9516ab1286425e9c3b89076951e0cc27 SHA1 cbcbeec36e97388946d507879df669a8fddb4ff4 SHA256 65297aa2b673cf3bdac902bc60ccac975ef2b8620ef1bf839dc0aa7ee8ea419d
