@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Mar 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net>
+  gst-rtsp-server-0.10.8.ebuild:
+  add introspection IUSE
+
   20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net>
   gst-rtsp-server-0.10.6.ebuild, gst-rtsp-server-0.10.7.ebuild,
   gst-rtsp-server-0.10.8.ebuild,
